feat(page): add modifier for no sidebar/vertical nav

--- a/src/patternfly/components/Page/page.hbs
+++ b/src/patternfly/components/Page/page.hbs
@@ -1,4 +1,4 @@
-<div class="{{pfv}}page{{#if page--modifier}} {{page--modifier}}{{/if}}"
+<div class="{{pfv}}page{{#if page--HasNoSidebar}} pf-m-no-sidebar{{/if}}{{#if page--modifier}} {{page--modifier}}{{/if}}"
   {{#if page--attribute}}
     {{{page--attribute}}}
   {{/if}}
