chore(icons): add a help icon svg partial

--- a/src/patternfly/components/Form/form-group-label-help.hbs
+++ b/src/patternfly/components/Form/form-group-label-help.hbs
@@ -6,7 +6,7 @@
     button--IsPlain=true
     button--HasNoPadding=true
     button--IsIcon=true
-    button--icon="question-circle"
+    button--icon-template='assets/images/icon-help'
     button--IsSpan=true
     button--aria-label=(ternary form-group-label-help--aria-label form-group-label-help--aria-label (concat 'More information for ' form-group--id))
     button--aria-describedby=(ternary form-group-label-help--aria-describedby form-group-label-help--aria-describedby false)}}
