--- a/src/patternfly/components/ModalBox/modal-box-header-help.hbs
+++ b/src/patternfly/components/ModalBox/modal-box-header-help.hbs
@@ -2,5 +2,5 @@
   {{#if modal-box-header-help--attribute}}
     {{{modal-box-header-help--attribute}}}
   {{/if}}>
-  {{> button button--IsPlain=true button--icon="question-circle" button--IsIcon=true button--attribute='aria-label="Help"'}}
+  {{> button button--IsPlain=true button--icon-template='assets/images/icon-help' button--IsIcon=true button--attribute='aria-label="Help"'}}
 </div>
