--- a/src/patternfly/components/FormControl/form-control.scss
+++ b/src/patternfly/components/FormControl/form-control.scss
@@ -290,6 +290,8 @@
     --#{$form-control}__icon--m-status--Color: var(--#{$form-control}--m-error__icon--m-status--Color);
     --#{$form-control}--after--BorderWidth: var(--#{$form-control}--m-error--after--BorderWidth);
 
+    @include pf-v6-animate-danger-jiggle("#{$form-control}");
+
     > textarea {
       padding-inline-end: var(--#{$form-control}--m-error--PaddingInlineEnd, var(--#{$form-control}__textarea--m-error--PaddingInlineEnd));
     }
@@ -432,12 +434,17 @@
   }
 }
 
+// Register the property type (unnested) for the custom property to be animatable
+@include pf-v6-animate-danger-translateX("#{$form-control}");
+
 .#{$form-control}__icon {
   font-size: var(--#{$form-control}__icon--FontSize);
   color: var(--#{$form-control}__icon--Color);
 
   &.pf-m-status {
     --#{$form-control}__icon--Color: var(--#{$form-control}__icon--m-status--Color);
+    
+    @include pf-v6-animate-icon-fade-in(#{$form-control});
   }
 }
 
