--- a/src/patternfly/components/TextInputGroup/text-input-group.scss
+++ b/src/patternfly/components/TextInputGroup/text-input-group.scss
@@ -128,6 +128,8 @@
     --#{$text-input-group}--BorderColor: var(--#{$text-input-group}--m-error--BorderColor);
     --#{$text-input-group}--m-hover--BorderColor: var(--#{$text-input-group}--m-hover--m-error--BorderColor);
     --#{$text-input-group}__icon--m-status--Color: var(--#{$text-input-group}__main--m-error__icon--m-status--Color);  
+
+    @include pf-v6-animate-danger-jiggle("#{$text-input-group}");
   }
   
   &:hover {
@@ -143,6 +145,9 @@
     --#{$text-input-group}--status__text-input--PaddingInlineEnd: var(--#{$text-input-group}--utilities--status__text-input--PaddingInlineEnd);
   }
 }
+
+// Register the property type (unnested) for the custom property to be animatable
+@include pf-v6-animate-danger-translateX("#{$text-input-group}");
 
 .#{$text-input-group}__main {
   display: flex;
@@ -192,6 +197,8 @@
     inset-inline-start: auto;
     inset-inline-end: var(--#{$text-input-group}__icon--m-status--InsetInlineEnd);
     color: var(--#{$text-input-group}__icon--m-status--Color);
+
+    @include pf-v6-animate-icon-fade-in(#{$text-input-group});
   }
 }
 
