--- a/src/patternfly/sass-utilities/mixins.scss
+++ b/src/patternfly/sass-utilities/mixins.scss
@@ -276,6 +276,58 @@
   }
 }
 
+// Register the property type for the custom property to be animatable
+@mixin pf-v6-animate-danger-translateX($element) {
+  @property  --#{$element}--m-danger--TranslateX {
+    syntax: "<length>";
+    inherits: false;
+    initial-value: 0;
+  }
+}
+
+// Animate error state on form elements
+@mixin pf-v6-animate-danger-jiggle($element) {
+  --#{$element}--m-danger--AnimationDuration--Transform: var(--pf-t--global--motion--duration--fade--default);
+  --#{$element}--m-danger--AnimationTimingFunction--Transform: var(--pf-t--global--motion--timing-function--default);
+  --#{$element}__status-icon--m-danger--TransitionDuration--Opacity: var(--pf-t--global--motion--duration--icon--default);
+  --#{$element}__status-icon--m-danger--TransitionTimingFunction--Opacity: var(--pf-t--global--motion--timing-function--default);
+
+  translate: var(--#{$element}--m-danger--TranslateX, 0);
+  animation-name: #{$element}-m-danger-motion;
+  animation-duration: var(--#{$element}--m-danger--AnimationDuration--Transform);
+  animation-timing-function: var(--#{$element}--m-danger--AnimationTimingFunction--Transform);
+  animation-fill-mode: both;
+
+  @media (prefers-reduced-motion: no-preference) {
+    @keyframes #{$element}-m-danger-motion {
+      33% {
+        --#{$element}--m-danger--TranslateX: -2px;
+      }
+      
+      66% {
+        --#{$element}--m-danger--TranslateX: 3px;
+      }
+    }
+  }
+}
+
+// Animate icon fade in
+@mixin pf-v6-animate-icon-fade-in($element) {
+  animation-name: #{$element}-status-icon-fade-in;
+  animation-duration: var(--#{$element}__status-icon--m-danger--TransitionDuration--Opacity);
+  animation-timing-function: var(--#{$element}__status-icon--m-danger--TransitionTimingFunction--Opacity);
+  
+  @keyframes #{$element}-status-icon-fade-in {
+    from {
+      opacity: 0;
+    }
+
+    to {
+      opacity: 1;
+    }
+  }
+}
+
 // Build variable stack
 @mixin pf-v6-build-css-variable-stack($prop, $css-var, $breakpoint-map: $pf-v6-global--breakpoint-map, $important: false) {
   $list: ();
