--- a/src/patternfly/components/Table/table-column-help-action.hbs
+++ b/src/patternfly/components/Table/table-column-help-action.hbs
@@ -2,5 +2,5 @@
   {{#if table-column-help-action--attribute}}
     {{{table-column-help-action--attribute}}}
   {{/if}}>
-  {{> button button--IsPlain=true button--IsIcon=true button--icon-template='assets/images/icon-help' button--HasNoPadding=true button--aria-label='aria-label="More info"'}}
+  {{> button button--IsPlain=true button--IsIcon=true button--icon-template="icon-help" button--HasNoPadding=true button--aria-label='aria-label="More info"'}}
 </span>
