--- a/src/patternfly/components/FormControl/form-control.scss
+++ b/src/patternfly/components/FormControl/form-control.scss
@@ -444,7 +444,7 @@
   &.pf-m-status {
     --#{$form-control}__icon--Color: var(--#{$form-control}__icon--m-status--Color);
     
-    @include pf-v6-animate-icon-fade-in(#{$form-control});
+    @include pf-v6-fade-default(#{$form-control}, fade-in);
   }
 }
 
