--- a/src/patternfly/components/DualListSelector/dual-list-selector.scss
+++ b/src/patternfly/components/DualListSelector/dual-list-selector.scss
@@ -35,6 +35,26 @@ $pf-v6-c-dual-list-selector__item--MaxNesting: 10;
   --#{$dual-list-selector}__menu--MaxHeight: #{pf-size-prem(320px)};
   --#{$dual-list-selector}__menu--MarginBlockStart: var(--pf-t--global--spacer--md);
 
+  // List
+  --#{$dual-list-selector}__list--TransitionDuration--expand--slide: 0s;
+  --#{$dual-list-selector}__list--TransitionDuration--expand--fade: var(--pf-t--global--motion--duration--fade--default);
+  --#{$dual-list-selector}__list--TransitionDuration--collapse--slide: 0s;
+  --#{$dual-list-selector}__list--TransitionDuration--collapse--fade: var(--pf-t--global--motion--duration--fade--default);
+  --#{$dual-list-selector}__list--TransitionDuration--slide: var(--#{$dual-list-selector}__list--TransitionDuration--expand--slide);
+  --#{$dual-list-selector}__list--TransitionDuration--fade: var(--#{$dual-list-selector}__list--TransitionDuration--expand--fade);
+  --#{$dual-list-selector}__list--TransitionTimingFunction: var(--pf-t--global--motion--timing-function--default);
+  --#{$dual-list-selector}__list--TransitionDelay: 0;
+  --#{$dual-list-selector}__list--Opacity: 0;
+  --#{$dual-list-selector}--m-expanded__list--Opacity: 1;
+  --#{$dual-list-selector}__list--TranslateY: 0;
+  --#{$dual-list-selector}--m-expanded__list--TranslateY: 0;
+
+  @media screen and (prefers-reduced-motion: no-preference) {
+    --#{$dual-list-selector}__list--TransitionDuration--expand--slide: var(--pf-t--global--motion--duration--fade--default);
+    --#{$dual-list-selector}__list--TransitionDuration--collapse--slide: var(--pf-t--global--motion--duration--fade--default);
+    --#{$dual-list-selector}__list--TranslateY: -1rem;
+  }
+
   // List item
   --#{$dual-list-selector}__list-item-row--FontSize: var(--pf-t--global--font--size--sm);
   --#{$dual-list-selector}__list-item-row--BackgroundColor:  var(--pf-t--global--background--color--action--plain--default);
@@ -199,10 +219,22 @@ $pf-v6-c-dual-list-selector__item--MaxNesting: 10;
 
   &.pf-m-expandable {
     --#{$dual-list-selector}__item--PaddingInlineStart: var(--#{$dual-list-selector}__item--m-expandable--PaddingInlineStart);
+
+    > .#{$dual-list-selector}__list {
+      opacity: var(--#{$dual-list-selector}__list--Opacity);
+      transition-timing-function: var(--#{$dual-list-selector}__list--TransitionTimingFunction);
+      transition-duration: var(--#{$dual-list-selector}__list--TransitionDuration--fade), var(--#{$dual-list-selector}__list--TransitionDuration--slide);
+      transition-property: opacity, translate;
+      translate: 0 var(--#{$dual-list-selector}__list--TranslateY);
+    }
   }
 
   &.pf-m-expanded {
     --#{$dual-list-selector}__item-toggle-icon--Rotate: var(--#{$dual-list-selector}__list-item--m-expanded__item-toggle-icon--Rotate);
+    --#{$dual-list-selector}__list--TransitionDuration--slide: var(--#{$dual-list-selector}__list--TransitionDuration--collapse--slide);
+    --#{$dual-list-selector}__list--TransitionDuration--fade: var(--#{$dual-list-selector}__list--TransitionDuration--collapse--fade);
+    --#{$dual-list-selector}__list--Opacity: var(--#{$dual-list-selector}--m-expanded__list--Opacity);
+    --#{$dual-list-selector}__list--TranslateY: var(--#{$dual-list-selector}--m-expanded__list--TranslateY);
   }
 
   &.pf-m-disabled {
