--- a/src/patternfly/components/TreeView/tree-view.scss
+++ b/src/patternfly/components/TreeView/tree-view.scss
@@ -28,6 +28,26 @@ $pf-v6-c-tree-view--MaxNesting: 10 !default;
   --#{$tree-view}__node-content--RowGap: var(--pf-t--global--spacer--sm);
   --#{$tree-view}__node-content--Overflow: visible;
 
+  // List
+  --#{$tree-view}__list--TransitionDuration--expand--slide: 0s;
+  --#{$tree-view}__list--TransitionDuration--expand--fade: var(--pf-t--global--motion--duration--fade--default);
+  --#{$tree-view}__list--TransitionDuration--collapse--slide: 0s;
+  --#{$tree-view}__list--TransitionDuration--collapse--fade: var(--pf-t--global--motion--duration--fade--default);
+  --#{$tree-view}__list--TransitionDuration--slide: var(--#{$tree-view}__list--TransitionDuration--expand--slide);
+  --#{$tree-view}__list--TransitionDuration--fade: var(--#{$tree-view}__list--TransitionDuration--expand--fade);
+  --#{$tree-view}__list--TransitionTimingFunction: var(--pf-t--global--motion--timing-function--default);
+  --#{$tree-view}__list--TransitionDelay: 0;
+  --#{$tree-view}__list--Opacity: 0;
+  --#{$tree-view}--m-expanded__list--Opacity: 1;
+  --#{$tree-view}__list--TranslateY: 0;
+  --#{$tree-view}--m-expanded__list--TranslateY: 0;
+
+  @media screen and (prefers-reduced-motion: no-preference) {
+    --#{$tree-view}__list--TransitionDuration--expand--slide: var(--pf-t--global--motion--duration--fade--default);
+    --#{$tree-view}__list--TransitionDuration--collapse--slide: var(--pf-t--global--motion--duration--fade--default);
+    --#{$tree-view}__list--TranslateY: -1rem;
+  }
+
   // Nested toggle
   --#{$tree-view}__list-item__list-item__node-toggle--InsetBlockStart: var(--#{$tree-view}__node--PaddingBlockStart);
   --#{$tree-view}__list-item__list-item__node-toggle--InsetInlineStart: var(--#{$tree-view}__node--PaddingInlineStart);
@@ -333,8 +353,15 @@ $pf-v6-c-tree-view--MaxNesting: 10 !default;
   transform: rotate(var(--#{$tree-view}__node-toggle-icon--Rotate));
 }
 
-// stylelint-disable
 .#{$tree-view}__list-item {
+  .#{$tree-view}__list {
+    opacity: var(--#{$tree-view}__list--Opacity);
+    transition-timing-function: var(--#{$tree-view}__list--TransitionTimingFunction);
+    transition-duration: var(--#{$tree-view}__list--TransitionDuration--fade), var(--#{$tree-view}__list--TransitionDuration--slide);
+    transition-property: opacity, translate;
+    translate: 0 var(--#{$tree-view}__list--TranslateY);
+  }
+
   .#{$tree-view}__list-item {
     --#{$tree-view}__node-toggle-icon--Rotate: var(--#{$tree-view}__node-toggle-icon--base--Rotate); // reset nested toggle icon rotate
     --#{$tree-view}__node-toggle--Color: var(--#{$tree-view}__node-toggle--Color--base); // reset nested toggle color
@@ -343,9 +370,14 @@ $pf-v6-c-tree-view--MaxNesting: 10 !default;
   &.pf-m-expanded {
     --#{$tree-view}__node-toggle--Color: var(--#{$tree-view}__list-item--m-expanded__node-toggle--Color);
     --#{$tree-view}__node-toggle-icon--Rotate: var(--#{$tree-view}__list-item--m-expanded__node-toggle-icon--Rotate);
+
+    > .#{$tree-view}__list {
+      opacity: var(--#{$tree-view}--m-expanded__list--Opacity);
+      transition-duration: var(--#{$tree-view}__list--TransitionDuration--collapse--fade), var(--#{$tree-view}__list--TransitionDuration--collapse--slide);
+      translate: 0 var(--#{$tree-view}--m-expanded__list--TranslateY);
+    }
   }
 }
-// stylelint-enable
 
 .#{$tree-view}__node,
 .#{$tree-view}__node-container {
