--- a/src/patternfly/components/Tabs/tabs.hbs
+++ b/src/patternfly/components/Tabs/tabs.hbs
@@ -6,6 +6,7 @@
   {{~#if tabs--IsExpanded}} pf-m-expanded{{/if}}
   {{~#if tabs--HasNoBorderBottom}} pf-m-no-border-bottom{{/if}}
   {{~#if __tabs-list--IsOverflow}} pf-m-overflow{{/if}}
+  {{~#if tabs--IsAnimateCurrent}} pf-m-animate-current{{/if}}
   {{~#if tabs--modifier}} {{tabs--modifier}}{{/if}}"
   {{#if tabs--attribute}}
     {{{tabs--attribute}}}
