--- a/src/patternfly/components/Tabs/tabs-link.hbs
+++ b/src/patternfly/components/Tabs/tabs-link.hbs
@@ -36,10 +36,10 @@
         li.classList.add('pf-m-current');
         {{#if tabs--IsVertical}}
           tabs.style.setProperty('--pf-v6-c-tabs--link-accent--start', top + 'px');
-          tabs.style.setProperty('--pf-v6-c-tabs--link-accent--length', height + 'px');
+          tabs.style.setProperty('--pf-v6-c-tabs--link-accent--length', height);
         {{else}}
           tabs.style.setProperty('--pf-v6-c-tabs--link-accent--start', left + 'px');
-          tabs.style.setProperty('--pf-v6-c-tabs--link-accent--length', width + 'px');
+          tabs.style.setProperty('--pf-v6-c-tabs--link-accent--length', width);
         {{/if}}
       }
     )()"
